# docs

./: .gitignore  404.html  Makefile  README.md  conf.py  index.html  index.rst  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
_static/: custom.css  mermaid-panzoom.js  openapi.yaml
actors/: index.html
api/: index.html  index.rst
database-model/: index.html
design/: actors.rst  database-model.rst  entities.rst  server-architecture.rst  use-cases.rst
docs/plans/: 2026-03-05-interactive-mermaid-diagrams-design.md  2026-03-05-interactive-mermaid-diagrams.md
entities/: index.html
implementation/: technologies.rst  user-interface.rst
market-analysis/: index.html
requirements/: functional.rst  index.html  index.rst  non-functional.rst
requirements/functional-requirements/: index.html
requirements/non-functional-requirements/: index.html
search/: search_index.json
server-architecture/: index.html
src/: README.md  market-analysis.md
src/javascripts/: extra.js
src/stylesheets/: extra.css
stylesheets/: extra.css
technologies/: index.html
use-cases/: index.html
user-interface/: index.html
