[project]
name = "papyrus-docs"
version = "1.0.0"
description = "Documentation for the Papyrus e-book management application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-swagger-ui-tag>=0.6",
    "pymdown-extensions>=10.0",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = ["mike>=2.1", "linkchecker>=10.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
