[project]
name = "papyrus-docs"
version = "1.0.0"
description = "Documentation for the Papyrus e-book management application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = ["zensical>=0.0.24", "mkdocs-swagger-ui-tag>=0.6", "mkdocs-mermaid2-plugin>=1.2"]

[project.optional-dependencies]
dev = ["linkchecker>=10.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
