[project]
name = "papyrus-docs"
version = "1.0.0"
description = "Documentation for the Papyrus e-book management application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "sphinx>=8.0",
    "furo>=2024.0",
    "sphinx-needs>=4.0",
    "sphinxcontrib-mermaid>=1.0",
    "sphinxcontrib-openapi>=0.9,"
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild>=2024.0",
    "linkchecker>=10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
